tests/error/comptime/check_inplace_construct3.bz
// error: invalid construction of an object of type 'int32'
// note: while evaluating expression at compile time
// note: address is a one-past-the-end pointer into this allocation
// note: allocation was made while evaluating expression at compile time
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		let p = __builtin_comptime_malloc(int32, 1);
		defer __builtin_comptime_free(p);

		__builtin_inplace_construct(p + 1, 0);
	});
}
